[workspace]
members = [
    "apps/backend",
    "crates/config/definition",
    "crates/config/macros",
    "crates/migrations",
    "crates/models/background",
    "crates/models/common",
    "crates/models/database",
    "crates/models/dependent",
    "crates/models/enum",
    "crates/models/external",
    "crates/models/fitness",
    "crates/models/importer",
    "crates/models/media",
    "crates/models/user",
    "crates/providers/anilist",
    "crates/providers/audible",
    "crates/providers/giant-bomb",
    "crates/providers/google-books",
    "crates/providers/hardcover",
    "crates/providers/igdb",
    "crates/providers/itunes",
    "crates/providers/listennotes",
    "crates/providers/manga-updates",
    "crates/providers/myanimelist",
    "crates/providers/openlibrary",
    "crates/providers/spotify",
    "crates/providers/tmdb",
    "crates/providers/vndb",
    "crates/providers/youtube-music",
    "crates/resolvers/collection",
    "crates/resolvers/exporter",
    "crates/resolvers/file-storage",
    "crates/resolvers/fitness",
    "crates/resolvers/importer",
    "crates/resolvers/miscellaneous",
    "crates/resolvers/statistics",
    "crates/resolvers/router",
    "crates/resolvers/user",
    "crates/services/cache",
    "crates/services/collection",
    "crates/services/exporter",
    "crates/services/file-storage",
    "crates/services/fitness",
    "crates/services/importer",
    "crates/services/integration",
    "crates/services/miscellaneous",
    "crates/services/miscellaneous/background",
    "crates/services/miscellaneous/calendar",
    "crates/services/miscellaneous/entity-details",
    "crates/services/miscellaneous/entity-user-details",
    "crates/services/miscellaneous/general",
    "crates/services/miscellaneous/lookup",
    "crates/services/miscellaneous/metadata-operations",
    "crates/services/miscellaneous/progress",
    "crates/services/miscellaneous/review",
    "crates/services/miscellaneous/search",
    "crates/services/miscellaneous/trending-and-events",
    "crates/services/notification",
    "crates/services/session",
    "crates/services/statistics",
    "crates/services/supporting",
    "crates/services/user",
    "crates/traits",
    "crates/utils/application",
    "crates/utils/common",
    "crates/utils/database",
    "crates/utils/dependent",
    "crates/utils/dependent/core",
    "crates/utils/external",
    "crates/utils/env",
]
resolver = "2"

[workspace.dependencies]
aes-gcm = "=0.10.3"
anyhow = "=1.0.98"
apalis = { version = "=0.7.2", features = ["catch-panic", "limit", "retry"] }
apalis-cron = "=0.7.2"
argon2 = "=0.6.0-rc.0"
async-graphql = { version = "=7.0.17", features = [
    "chrono",
    "decimal",
    "log",
    "tracing",
    "uuid",
] }
async-graphql-axum = "=7.0.17"
async-trait = "=0.1.88"
aws-sdk-s3 = { version = "=1.76.0", features = ["behavior-version-latest"] }
axum = { version = "=0.8.4", features = ["macros", "multipart"] }
boilermates = "=0.3.0"
bon = "=3.6.4"
chrono = "=0.4.41"
chrono-tz = "=0.10.4"
const-str = "=0.6.3"
convert_case = "=0.8.0"
csv = "=1.3.1"
data-encoding = "=2.9.0"
derive_more = { version = "=2.0.1", features = [
    "add",
    "add_assign",
    "sum",
], default-features = false }
dotenvy = "=0.15.7"
dotenv-build = "=0.1.1"
educe = { version = "=0.6.0", features = [
    "Debug",
    "Default",
    "full",
], default-features = false }
enum_meta = "=0.7.0"
eventsource-stream = "=0.2.3"
flate2 = "=1.1.2"
futures = "=0.3.31"
hashbag = "=0.1.12"
hex = "=0.4.3"
http = "=1.3.1"
indexmap = "=2.10.0"
indoc = "=2.0.6"
isolang = { version = "=2.4.0", features = ["list_languages"] }
itertools = "=0.14.0"
logs-wheel = "=0.3.1"
markdown = "=1.0.0"
mime_guess = "=2.0.5"
nanoid = "=0.4.0"
nest_struct = "=0.5.5"
openidconnect = "=4.0.1"
paginate = "=1.1.11"
quote = "=1.0.40"
rand = "=0.9.1"
ring = "=0.17.14"
regex = "=1.11.1"
reqwest = { version = "=0.12.22", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
rstest = "=0.25.0"
rust_decimal = "=1.37.2"
rust_decimal_macros = "=1.37.1"
rust_iso3166 = "=0.1.14"
rustypipe = { version = "=0.11.4", features = [
    "userdata",
    "rustls-tls-webpki-roots",
], default-features = false }
schematic = { version = "=0.18.10", features = [
    "config",
    "env",
    "json",
    "schema",
    "toml",
    "renderer_typescript",
    "type_chrono",
    "type_rust_decimal",
    "url",
    "renderer_template",
    "validate",
    "yaml",
], default-features = false }
sea-orm = { version = "=1.1.13", features = [
    "debug-print",
    "postgres-array",
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
sea-orm-migration = { version = "=1.1.13", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sea-query = "=0.32.6"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
serde_with = { version = "=3.14.0", features = ["chrono_0_4"] }
serde-xml-rs = "=0.8.1"
slug = "=0.1.6"
sqlx = { version = "=0.8.6", default-features = false, features = ["postgres"] }
strum = { version = "=0.26.3", features = ["derive"] }
struson = { version = "=0.6.0", features = ["serde"] }
subtle = "=2.6.1"
syn = { version = "=2.0.104", features = ["full", "derive"] }
tokio = { version = "=1.46.1", features = ["full"] }
tokio-util = { version = "=0.7.15", features = ["codec"] }
tower = "=0.5.2"
tower_governor = "=0.7.0"
totp-lite = "=2.0.1"
tower-http = { version = "=0.6.6", features = ["catch-panic", "cors", "trace"] }
tracing = { version = "=0.1.41", features = ["attributes"] }
tracing-subscriber = "=0.3.19"
unkey = "=0.6.0"
url = "=2.5.4"
uuid = { version = "=1.17.0", features = ["v4"], default-features = false }

[profile.release]
lto = true
