[workspace]
resolver = "2"
members = [
    "apps/backend",
    "crates/config/definition",
    "crates/config/macros",
    "crates/migrations/sql",
    "crates/migrations/utils",
    "crates/models/background",
    "crates/models/common",
    "crates/models/database",
    "crates/models/dependent",
    "crates/models/enum",
    "crates/models/external",
    "crates/models/fitness",
    "crates/models/importer",
    "crates/models/media",
    "crates/models/user",
    "crates/providers/anilist",
    "crates/providers/audible",
    "crates/providers/giant-bomb",
    "crates/providers/google-books",
    "crates/providers/hardcover",
    "crates/providers/igdb",
    "crates/providers/itunes",
    "crates/providers/listennotes",
    "crates/providers/manga-updates",
    "crates/providers/myanimelist",
    "crates/providers/openlibrary",
    "crates/providers/spotify",
    "crates/providers/tmdb",
    "crates/providers/tvdb",
    "crates/providers/vndb",
    "crates/providers/youtube-music",
    "crates/resolvers/collection",
    "crates/resolvers/custom",
    "crates/resolvers/exporter",
    "crates/resolvers/file-storage",
    "crates/resolvers/fitness",
    "crates/resolvers/importer",
    "crates/resolvers/miscellaneous/filter_preset",
    "crates/resolvers/miscellaneous/grouping",
    "crates/resolvers/miscellaneous/metadata",
    "crates/resolvers/miscellaneous/search",
    "crates/resolvers/miscellaneous/social",
    "crates/resolvers/miscellaneous/system",
    "crates/resolvers/miscellaneous/tracking",
    "crates/resolvers/statistics",
    "crates/resolvers/router",
    "crates/resolvers/user/authentication",
    "crates/resolvers/user/management",
    "crates/resolvers/user/services",
    "crates/services/cache",
    "crates/services/collection",
    "crates/services/custom",
    "crates/services/exporter",
    "crates/services/file-storage",
    "crates/services/fitness",
    "crates/services/importer",
    "crates/services/integration",
    "crates/services/miscellaneous",
    "crates/services/miscellaneous/background",
    "crates/services/miscellaneous/calendar",
    "crates/services/miscellaneous/entity-user-details",
    "crates/services/miscellaneous/filter_preset",
    "crates/services/miscellaneous/general",
    "crates/services/miscellaneous/lookup",
    "crates/services/miscellaneous/metadata-operations",
    "crates/services/miscellaneous/progress",
    "crates/services/miscellaneous/review",
    "crates/services/miscellaneous/search",
    "crates/services/miscellaneous/trending-and-events",
    "crates/services/notification",
    "crates/services/session",
    "crates/services/statistics",
    "crates/services/supporting",
    "crates/services/user",
    "crates/traits",
    "crates/utils/application",
    "crates/utils/common",
    "crates/utils/database",
    "crates/utils/dependent/analytics",
    "crates/utils/dependent/collection",
    "crates/utils/dependent/core",
    "crates/utils/dependent/details",
    "crates/utils/dependent/entity-list",
    "crates/utils/dependent/fitness",
    "crates/utils/dependent/import",
    "crates/utils/dependent/jobs",
    "crates/utils/dependent/entity",
    "crates/utils/dependent/notification",
    "crates/utils/dependent/progress",
    "crates/utils/dependent/review",
    "crates/utils/dependent/seen",
    "crates/utils/dependent/utility",
    "crates/utils/external",
    "crates/utils/env",
]

[workspace.dependencies]
aes-gcm = "=0.10.3"
anyhow = "=1.0.100"
apalis = { version = "=0.7.3", features = ["catch-panic", "limit", "retry"] }
apalis-cron = "=0.7.3"
argon2 = "=0.6.0-rc.1"
async-graphql = { version = "=7.0.17", features = [
    "chrono",
    "decimal",
    "log",
    "tracing",
    "uuid",
] }
async-graphql-axum = "=7.0.17"
async-trait = "=0.1.89"
aws-sdk-s3 = { version = "=1.110.0", features = ["behavior-version-latest"] }
axum = { version = "=0.8.6", features = ["macros", "multipart"] }
boilermates = "=0.3.0"
bon = "=3.8.1"
chrono = "=0.4.42"
chrono-tz = "=0.10.4"
const-str = "=0.7.0"
convert_case = "=0.8.0"
csv = "=1.4.0"
data-encoding = "=2.9.0"
derive_more = { version = "=2.0.1", features = [
    "add",
    "add_assign",
    "sum",
], default-features = false }
dotenvy = "=0.15.7"
dotenv-build = "=0.1.1"
educe = { version = "=0.6.0", features = [
    "Debug",
    "Default",
    "full",
], default-features = false }
english-to-cron = "0.1.6"
enum_meta = "=0.7.0"
eventsource-stream = "=0.2.3"
flate2 = "=1.1.5"
futures = "=0.3.31"
hashbag = "=0.1.12"
hex = "=0.4.3"
http = "=1.3.1"
indexmap = "=2.12.0"
indoc = "=2.0.7"
itertools = "=0.14.0"
markdown = "=1.0.0"
mime_guess = "=2.0.5"
nanoid = "=0.4.0"
nest_struct = "=0.5.5"
openidconnect = "=4.0.1"
paginate = "=1.1.11"
quote = "=1.0.41"
rand = "=0.9.2"
ring = "=0.17.14"
regex = "=1.12.2"
reqwest = { version = "=0.12.24", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
rstest = "=0.26.1"
rust_decimal = { version = "=1.39.0", features = ["macros"] }
rust_iso3166 = "=0.1.14"
rustypipe = { version = "=0.11.4", features = [
    "userdata",
    "rustls-tls-webpki-roots",
], default-features = false }
schematic = { version = "=0.18.15", features = [
    "config",
    "env",
    "json",
    "schema",
    "toml",
    "renderer_typescript",
    "type_chrono",
    "type_rust_decimal",
    "url",
    "renderer_template",
    "validate",
    "yaml",
], default-features = false }
sea-orm = { version = "=1.1.17", features = [
    "debug-print",
    "postgres-array",
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
sea-orm-migration = { version = "=1.1.17", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
serde_with = { version = "=3.15.1", features = ["chrono_0_4"] }
serde-xml-rs = "=0.8.1"
slug = "=0.1.6"
strum = { version = "=0.26.3", features = ["derive"] }
struson = { version = "=0.6.0", features = ["serde"] }
subtle = "=2.6.1"
syn = { version = "=2.0.108", features = ["full", "derive"] }
tempfile = "=3.23.0"
tokio = { version = "=1.48.0", features = ["full"] }
tokio-util = { version = "=0.7.16", features = ["codec"] }
tower = "=0.5.2"
totp-lite = "=2.0.1"
tower-http = { version = "=0.6.6", features = ["catch-panic", "cors", "trace"] }
tracing = { version = "=0.1.41", features = ["attributes"] }
tracing-appender = "=0.2.3"
tracing-subscriber = "=0.3.20"
url = "=2.5.7"
uuid = { version = "=1.18.1", features = ["v4"], default-features = false }
zip = "=6.0.0"

anilist-provider = { path = "crates/providers/anilist" }
application-utils = { path = "crates/utils/application" }
audible-provider = { path = "crates/providers/audible" }
background-models = { path = "crates/models/background" }
cache-service = { path = "crates/services/cache" }
collection-resolver = { path = "crates/resolvers/collection" }
collection-service = { path = "crates/services/collection" }
common-models = { path = "crates/models/common" }
custom-resolver = { path = "crates/resolvers/custom" }
custom-service = { path = "crates/services/custom" }
common-utils = { path = "crates/utils/common" }
config-definition = { path = "crates/config/definition" }
config-macros = { path = "crates/config/macros" }
database-models = { path = "crates/models/database" }
database-utils = { path = "crates/utils/database" }
dependent-analytics-utils = { path = "crates/utils/dependent/analytics" }
dependent-collection-utils = { path = "crates/utils/dependent/collection" }
dependent-core-utils = { path = "crates/utils/dependent/core" }
dependent-details-utils = { path = "crates/utils/dependent/details" }
dependent-entity-list-utils = { path = "crates/utils/dependent/entity-list" }
dependent-entity-utils = { path = "crates/utils/dependent/entity" }
dependent-fitness-utils = { path = "crates/utils/dependent/fitness" }
dependent-import-utils = { path = "crates/utils/dependent/import" }
dependent-jobs-utils = { path = "crates/utils/dependent/jobs" }
dependent-models = { path = "crates/models/dependent" }
dependent-notification-utils = { path = "crates/utils/dependent/notification" }
dependent-progress-utils = { path = "crates/utils/dependent/progress" }
dependent-provider-utils = { path = "crates/utils/dependent/provider" }
dependent-review-utils = { path = "crates/utils/dependent/review" }
dependent-seen-utils = { path = "crates/utils/dependent/seen" }
dependent-utility-utils = { path = "crates/utils/dependent/utility" }
enum-models = { path = "crates/models/enum" }
env-utils = { path = "crates/utils/env" }
exporter-resolver = { path = "crates/resolvers/exporter" }
exporter-service = { path = "crates/services/exporter" }
external-models = { path = "crates/models/external" }
external-utils = { path = "crates/utils/external" }
file-storage-resolver = { path = "crates/resolvers/file-storage" }
file-storage-service = { path = "crates/services/file-storage" }
fitness-models = { path = "crates/models/fitness" }
fitness-resolver = { path = "crates/resolvers/fitness" }
fitness-service = { path = "crates/services/fitness" }
giant-bomb-provider = { path = "crates/providers/giant-bomb" }
google-books-provider = { path = "crates/providers/google-books" }
hardcover-provider = { path = "crates/providers/hardcover" }
igdb-provider = { path = "crates/providers/igdb" }
importer-models = { path = "crates/models/importer" }
importer-resolver = { path = "crates/resolvers/importer" }
importer-service = { path = "crates/services/importer" }
integration-service = { path = "crates/services/integration" }
itunes-provider = { path = "crates/providers/itunes" }
listennotes-provider = { path = "crates/providers/listennotes" }
manga-updates-provider = { path = "crates/providers/manga-updates" }
media-models = { path = "crates/models/media" }
migrations-sql = { path = "crates/migrations/sql" }
migrations-utils = { path = "crates/migrations/utils" }
miscellaneous-background-service = { path = "crates/services/miscellaneous/background" }
miscellaneous-calendar-service = { path = "crates/services/miscellaneous/calendar" }
miscellaneous-entity-user-details-service = { path = "crates/services/miscellaneous/entity-user-details" }
miscellaneous-filter-preset-service = { path = "crates/services/miscellaneous/filter_preset" }
miscellaneous-general-service = { path = "crates/services/miscellaneous/general" }
miscellaneous-lookup-service = { path = "crates/services/miscellaneous/lookup" }
miscellaneous-metadata-operations-service = { path = "crates/services/miscellaneous/metadata-operations" }
miscellaneous-progress-service = { path = "crates/services/miscellaneous/progress" }
miscellaneous-resolver = { path = "crates/resolvers/miscellaneous" }
miscellaneous-filter-preset-resolver = { path = "crates/resolvers/miscellaneous/filter_preset" }
miscellaneous-grouping-resolver = { path = "crates/resolvers/miscellaneous/grouping" }
miscellaneous-metadata-resolver = { path = "crates/resolvers/miscellaneous/metadata" }
miscellaneous-search-resolver = { path = "crates/resolvers/miscellaneous/search" }
miscellaneous-social-resolver = { path = "crates/resolvers/miscellaneous/social" }
miscellaneous-system-resolver = { path = "crates/resolvers/miscellaneous/system" }
miscellaneous-tracking-resolver = { path = "crates/resolvers/miscellaneous/tracking" }
miscellaneous-review-service = { path = "crates/services/miscellaneous/review" }
miscellaneous-search-service = { path = "crates/services/miscellaneous/search" }
miscellaneous-service = { path = "crates/services/miscellaneous" }
miscellaneous-trending-and-events-service = { path = "crates/services/miscellaneous/trending-and-events" }
myanimelist-provider = { path = "crates/providers/myanimelist" }
notification-service = { path = "crates/services/notification" }
openlibrary-provider = { path = "crates/providers/openlibrary" }
router-resolver = { path = "crates/resolvers/router" }
session-service = { path = "crates/services/session" }
spotify-provider = { path = "crates/providers/spotify" }
statistics-resolver = { path = "crates/resolvers/statistics" }
statistics-service = { path = "crates/services/statistics" }
supporting-service = { path = "crates/services/supporting" }
tmdb-provider = { path = "crates/providers/tmdb" }
tvdb-provider = { path = "crates/providers/tvdb" }
traits = { path = "crates/traits" }
user-authentication-resolver = { path = "crates/resolvers/user/authentication" }
user-management-resolver = { path = "crates/resolvers/user/management" }
user-models = { path = "crates/models/user" }
user-resolver = { path = "crates/resolvers/user" }
user-services-resolver = { path = "crates/resolvers/user/services" }
user-service = { path = "crates/services/user" }
vndb-provider = { path = "crates/providers/vndb" }
youtube-music-provider = { path = "crates/providers/youtube-music" }

[profile.release]
lto = true
