[package]
name = "backend"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/IgnisDa/ryot"
license = "GPL-3.0"

[dependencies]
anyhow = { workspace = true }
apalis = { workspace = true }
apalis-cron = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
chrono-tz = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
logs-wheel = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde_json = { workspace = true }
schematic = { workspace = true }
tokio = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

application-utils = { workspace = true }
background-models = { workspace = true }
collection-resolver = { workspace = true }
collection-service = { workspace = true }
common-utils = { workspace = true }
config-definition = { workspace = true }
dependent-models = { workspace = true }
env-utils = { workspace = true }
exporter-resolver = { workspace = true }
exporter-service = { workspace = true }
file-storage-resolver = { workspace = true }
file-storage-service = { workspace = true }
fitness-resolver = { workspace = true }
fitness-service = { workspace = true }
importer-resolver = { workspace = true }
importer-service = { workspace = true }
integration-service = { workspace = true }
migrations = { workspace = true }
miscellaneous-resolver = { path = "../../crates/resolvers/miscellaneous" }
miscellaneous-service = { path = "../../crates/services/miscellaneous" }
router-resolver = { path = "../../crates/resolvers/router" }
statistics-resolver = { path = "../../crates/resolvers/statistics" }
statistics-service = { path = "../../crates/services/statistics" }
supporting-service = { path = "../../crates/services/supporting" }
traits = { workspace = true }
user-resolver = { path = "../../crates/resolvers/user" }
user-service = { workspace = true }
