[package]
name = "background"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
database-models = { path = "../models/database" }
enums = { path = "../enums" }
fitness-models = { path = "../models/fitness" }
media-models = { path = "../models/media" }
serde = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
