[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
common_models = { path = "./common" }
database_models = { path = "./database" }
dependent_models = { path = "./dependent" }
fitness_models = { path = "./fitness" }
importer_models = { path = "./importer" }
media_models = { path = "./media" }
user_models = { path = "./user" }
