[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
common-models = { path = "./common" }
database-models = { path = "./database" }
dependent_models = { path = "./dependent" }
fitness_models = { path = "./fitness" }
importer_models = { path = "./importer" }
media_models = { path = "./media" }
specific_models = { path = "./specific" }
user_models = { path = "./user" }
