[package]
name = "providers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
application-utils = { path = "../utils/application" }
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
common-models = { path = "../models/common" }
common-utils = { path = "../utils/common" }
config = { path = "../config" }
const-str = { workspace = true }
convert_case = { workspace = true }
database-models = { path = "../models/database" }
dependent-models = { path = "../models/dependent" }
educe = { workspace = true }
enum-models = { path = "../models/enum" }
futures = { workspace = true }
graphql_client = { workspace = true }
hashbag = { workspace = true }
itertools = { workspace = true }
media-models = { path = "../models/media" }
nest_struct = { workspace = true }
paginate = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
rust_iso3166 = { workspace = true }
rustypipe = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
supporting-service = { path = "../services/supporting" }
tokio = { workspace = true }
tracing = { workspace = true }
traits = { path = "../traits" }

[package.metadata.cargo-machete]
ignored = ["tracing"]
