[package]
name = "providers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
application-utils = { path = "../utils/application" }
async-trait = { workspace = true }
common-models = { path = "../models/common" }
common-utils = { path = "../utils/common" }
config = { path = "../config" }
const-str = { workspace = true }
convert_case = { workspace = true }
database-models = { path = "../models/database" }
dependent-models = { path = "../models/dependent" }
enum-models = { path = "../models/enum" }
itertools = { workspace = true }
media-models = { path = "../models/media" }
rand = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rustypipe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
traits = { path = "../traits" }

[package.metadata.cargo-machete]
ignored = ["tracing"]
