[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
exporter_service = { path = "./exporter" }
file_storage_service = { path = "./file_storage" }
fitness_service = { path = "./fitness" }
importer_service = { path = "./importer" }
integration_service = { path = "./integration" }
jwt_service = { path = "./jwt" }
miscellaneous_service = { path = "./miscellaneous" }
notification_service = { path = "./notification" }
