[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
exporter-service = { path = "./exporter" }
file-storage-service = { path = "./file-storage" }
fitness-service = { path = "./fitness" }
importer-service = { path = "./importer" }
integration-service = { path = "./integration" }
jwt-service = { path = "./jwt" }
miscellaneous-service = { path = "./miscellaneous" }
notification-service = { path = "./notification" }
statistics-service = { path = "./statistics" }
