[package]
name = "traits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

application-utils = { workspace = true }
common-models = { workspace = true }
common-utils = { workspace = true }
database-models = { path = "../models/database" }
database-utils = { path = "../utils/database" }
dependent-models = { workspace = true }
media-models = { workspace = true }
supporting-service = { path = "../services/supporting" }

[package.metadata.cargo-machete]
ignored = ["tracing"]
